--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.27.3",
+    "axios": "^1.12.1",
+    "bootstrap": "^5.3.8",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
