--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.12.1",
     "bootstrap": "^5.3.8",
     "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
